[tool.poetry]
authors = ["Dmitrijs Sorokins"]
description = "Function wrapper for Advent of Code"
license = "MIT"
name = "PyAdventOfCode"
packages = [{include = "pyaoc"}]
version = "0.1.2"

[tool.poetry.dependencies]
appdirs = "^1.4.4"
python = "^3.6"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.30.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
