[project]
name = "py-advent-of-code"
version = "0.3.0"
description = "Wrapper for Advent of Code. Gets input, runs your code and submits result."
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "appdirs>=1.4.4",
  "dotenv>=0.9.9",
  "requests>=2.32.5",
  "tqdm>=4.67.1",
]

[dependency-groups]
dev = ["ruff>=0.14.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyaoc"]

[tool.ruff]
line-length = 150
indent-width = 2

[tool.ruff.lint.isort]
length-sort = true
